Fixed lasagna alignment

--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ body {
     background:rgb(57, 63, 58);
     padding: 150px;
 }
+img{
+    margin-right: auto;
+    margin-right: auto;
+    width: 100%;
+}
 h3, h4 {
     font-size: 25px;
     text-align: center;
